pytest testing 48 tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ markers =
     payment_intents: Payment Intents API tests
     customers: Customers API tests
     refunds: Refunds API tests
+    charges: Charges API tests
     error_handling: Error handling tests
     auth: Authentication tests
     schema: Schema validation tests
